--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -135,6 +135,13 @@ input[type="text"]:focus {
     color: #3498db;
 }
 
+#room-id-display {
+    display: flex; /* или block */
+    align-items: center;
+    gap: 10px;
+    margin-top: 15px;
+}
+
 .copy-btn {
     background-color: #3498db;
     color: white;
@@ -426,6 +433,7 @@ input[type="text"]:focus {
     padding: 15px;
     text-align: center;
     cursor: pointer;
+    -webkit-user-select: none;
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
